<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="put_cross">Put Cross</string>
    <string name="put_zero">Put Zero</string>
    <string name="crosses_won">Crosses won</string>
    <string name="zeroes_won">Zeroes won</string>
    <string name="draw">Draw</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="x_o">X / O</string>
    <string name="play">Play</string>
    <string name="select_player">Select player</string>
    <string name="score_table">Score table</string>
    <string name="x_player">X player:</string>
    <string name="o_player">O player:</string>
    <string name="player_plug">Player</string>
    <string name="winner">Winner:</string>
    <string name="crosses">Crosses</string>
    <string name="zeroes">Zeroes</string>
    <string name="select_image">Select avatar from gallery</string>
    <string name="new_player_zeroes">New zeroes player</string>
    <string name="new_player_crosses">New crosses player</string>
    <string name="add_player">Add player</string>
    <string name="hint_name">Input name</string>
</resources>