<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:background="@drawable/border">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/x_player" />

        <TextView
            android:id="@+id/x_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_plug" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/o_player" />

        <TextView
            android:id="@+id/o_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_plug" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/winner" />

        <TextView
            android:id="@+id/winner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_plug" />


    </LinearLayout>

</LinearLayout>