<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:text="@string/x_o"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/play"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/players_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/play"
        app:layout_constraintLeft_toLeftOf="@+id/play"
        app:layout_constraintRight_toRightOf="@+id/play"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:paddingEnd="3dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/select_crosses_player"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/select_player"
                android:visibility="visible"
                android:layout_weight="5" />

            <ImageButton
                android:id="@+id/select_crosses_player_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_weight="5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/crosses"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:paddingStart="3dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/select_zeroes_player"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="@string/select_player"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/select_zeroes_player_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zeroes"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>
        
    </LinearLayout>

    <Button
        android:id="@+id/score_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/play"
        app:layout_constraintEnd_toEndOf="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/players_selector"
        android:text="@string/score_table" />

</androidx.constraintlayout.widget.ConstraintLayout>